The horizontal scroll bar will no longer be visible when the content overflows
issue: 92176

--- a/src/components/grid-smart-css/grid-smart-css.scss
+++ b/src/components/grid-smart-css/grid-smart-css.scss
@@ -57,7 +57,12 @@ gx-grid-smart-css {
     }
     @media (pointer: coarse) {
       #{$gridContentSelector} {
-        overflow-x: auto;
+        overflow-x: overlay;
+
+        &::-webkit-scrollbar {
+          width: 0px;
+          height: 0px;
+        }
       }
     }
   }
